--- a/opmaak/style.css
+++ b/opmaak/style.css
@@ -1,23 +1,7 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+.content {
+    min-height: calc(100vh - 70px);
 }
 
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111;
+.footer {
+    height: 50px;
 }
